Migrate to JavaFX again